<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name_placeholder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings_label"
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream_chk_box_label"/>
        <CheckBox
            android:id="@+id/chocolate_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate_chk_box_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:onClick="decrementQuantity" />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:onClick="incrementQuantity" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary_label"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button_label"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:onClick="submitOrder" />
    </LinearLayout>
</ScrollView>